# Demos

./: artifacts.xml  build.gradle  screenMatch.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
configuration/: config.ini
configuration/org.eclipse.update/: platform.xml
designPattern/: build.gradle
designPattern/src/main/: AndroidManifest.xml
eventdispatch/: build.gradle
eventdispatch/src/main/: AndroidManifest.xml
giflib/: CMakeLists.txt  build.gradle
giflib/src/androidTest/java/com/perdev/giflib/: ExampleInstrumentedTest.kt
giflib/src/main/: AndroidManifest.xml
giflib/src/main/cpp/: GifLibHandler.cpp  GifLoader.cpp  PthreadSleep.cpp
giflib/src/main/cpp/giflib/: gif_lib.h
giflib/src/main/java/com/perdev/giflib/: MainActivity.kt
giflib/src/main/java/com/perdev/giflib/jnipackage/: GifLoader.java
giflib/src/main/res/layout/: activity_main.xml
giflib/src/main/res/values/: dimens.xml
giflib/src/test/java/com/perdev/giflib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jrtt_screenadapt/: build.gradle
jrtt_screenadapt/src/main/: AndroidManifest.xml
p2/org.eclipse.equinox.p2.core/cache/: artifacts.xml
recyclerview/: build.gradle
recyclerview/src/main/: AndroidManifest.xml
sw_screenadapt/: build.gradle
sw_screenadapt/src/main/: AndroidManifest.xml
utilslib/: build.gradle
utilslib/src/main/: AndroidManifest.xml
xmind/: AlarmManager使用.txt  Android知识点梳理.xmind  Notification使用.txt  artifacts.xml
xmind/configuration/: config.ini
(+272 files in other folders)
